index.html file updated

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
   <head></head>
   <title></title>
   <body>
-    <h1>Hello World!? ddd</h1>
+    <h1>Hello World!</h1>
     <h3>Testing local and online url!!!</h3>
     <script src="bundle.js"></script>
   </body>
