--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,10 @@
-<html>
-  <head></head>
-  <title></title>
+<!DOCTYPE html>
+  <html lang="en">
+  <head>
+      <meta charset="UTF-8">
+  </head>
   <body>
     <h1>Hello World!</h1>
-    <h3>Testing local and online url!!!</h3>
     <script src="bundle.js"></script>
   </body>
 </html>
